--- a/frontend/src/components/analysis/StatusFilter.module.scss
+++ b/frontend/src/components/analysis/StatusFilter.module.scss
@@ -10,8 +10,10 @@
 
     .ant-radio-button-wrapper {
       height: 36px;
+      min-width: 120px;
       display: flex;
       align-items: center;
+      justify-content: center;
       padding: 0 16px;
       
       &:hover {
@@ -24,6 +26,8 @@
 .optionLabel {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 4px;
   font-weight: 500;
+  width: 100%;
 }
