--- a/frontend/src/components/jobs/JobCard.module.scss
+++ b/frontend/src/components/jobs/JobCard.module.scss
@@ -72,4 +72,11 @@
       margin-bottom: 8px;
     }
   }
+  
+  .planLink {
+    margin-top: 16px;
+    padding-top: 16px;
+    border-top: 1px solid #f0f0f0;
+    text-align: center;
+  }
 }
