--- a/frontend/src/pages/jobs/JobMonitor.module.scss
+++ b/frontend/src/pages/jobs/JobMonitor.module.scss
@@ -321,6 +321,8 @@
   
   .cardView {
     padding: 20px;
+    background: #f5f5f5;
+    min-height: calc(100vh - 200px);
     
     :global {
       .ant-col {
